[gd_scene load_steps=11 format=2]

[ext_resource path="res://DockIcon.gd" type="Script" id=1]
[ext_resource path="res://Font_Arial.tres" type="DynamicFont" id=2]
[ext_resource path="res://arts/Texture2D/sactx-2048x2048-ETC2-Ships-46f90d4a #7.png" type="Texture" id=3]

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[sub_resource type="OpenSimplexNoise" id=1]

[sub_resource type="NoiseTexture" id=2]
width = 64
height = 64
seamless = true
noise = SubResource( 1 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.101961 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "activate"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.120742, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0.145098, 0.423529, 0.776471, 0.25098 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "hover"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.120742, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.101961 ), Color( 1, 1, 1, 0.329412 ) ]
}

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 1312, 504, 278, 217 )

[node name="DockIcon" type="Control" groups=["DockIcon"]]
margin_right = 128.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
rect_clip_content = true
script = ExtResource( 1 )

[node name="name" type="RichTextLabel" parent="."]
margin_right = 128.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
custom_fonts/normal_font = ExtResource( 2 )
text = "scout"
fit_content_height = true

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.101961 )
material = SubResource( 3 )
margin_right = 128.0
margin_bottom = 128.0
texture = SubResource( 2 )
stretch_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/activate = SubResource( 7 )
anims/hover = SubResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 2

[node name="ShipShot" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
texture = SubResource( 4 )
expand = true
stretch_mode = 6

[connection signal="gui_input" from="." to="." method="_on_DockIcon_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_DockIcon_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_DockIcon_mouse_exited"]
